# az-vectordb

./: .cursorrules  .gitignore  MIGRATION_GUIDE.md  README.md  README_REORGANIZED.md  deploy-infrastructure.sh  main.bicep  marketplaceSettings.json  pyproject.toml  requirements-dev.txt  semantic_test_results.json
app/: .env.example  __init__.py  config.py  database.py  embedding_service.py  generate_customers.py  main.py  main_new.py  matching_service.py  models.py  requirements.txt
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  customers.py  display.py  health.py  matching.py  test_results.py
app/core/: __init__.py  config.py  database.py
app/import/: import_customers.py
app/models/: __init__.py  database.py  schemas.py
app/services/: __init__.py  display_service.py  embedding_service.py  matching_service.py  test_result_processor.py
app/services/matching/: README.md  __init__.py  base_matcher.py  business_rules.py  exact_matcher.py  fuzzy_matcher.py  matching_service.py  result_processor.py  utils.py  vector_matcher.py
app/utils/: __init__.py  helpers.py
bicep/: postgresql-pgvector.bicep  postgresql-pgvector.parameters.json  postgresql-pgvector.parameters.template.json
docs/: customer_matching_options.md  environment_setup.md  incoming_customer_testing_guide.md  infra_deploy_instructions.md  options.md  poc_options.md  step_by_step_matching_testing.md  test_checklist.md  vector_match_testing_plan.md  vector_matching_testing_plan.md
docs/archive/: MIGRATION_GUIDE.md  README.md  README_REORGANIZED.md  tasklist.md
docs/plans/: matching_results_display_plan.md  matching_testing_plan.md
docs/prompts/: README.md  azure_architect_prompt.md  checklist_implementation_prompt.md  postgresql_principal_dba_prompt.md  powershell_windows_dev_prompt.md  python_principal_dev_prompt.md
migrations/: V1__create_document_embeddings.sql
notebooks/: README.md  api_testing.ipynb
scripts/: generate_customer_data.py  generate_incoming_customers.py  generate_semantic_test_data.py  import_customers.py  import_incoming_customers.py  run_migration.py  run_semantic_similarity_tests.py  test_processing_status.py
scripts/old/: generate_semantic_test_data.py
sql/: 01-setup-pgvector.sql  02-functions.sql  03-create-test-results-table.sql  04-enhanced-display-view.sql  README.md  exec-sql-file.sh  test-connection.sql
tests/: __init__.py  conftest.py  test_api.py
tests/integration/: __init__.py  test_business_rules_functional.py  test_processing_status.py
tests/integration/vector_match/: test_step0_pre_setup.py  test_step1_data_source_verification.py  test_step4_01_integrated_matching.py  test_step4_vector_matching_execution.py  test_step888_integrated_matching.py
tests/unit/: test_exact_matching.py  test_refactored_matching.py  test_vector_matching.py
zold/: main.bicep
